--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for(:page_title) { "#{@product.name} by #{@product.advertiser}" } %>
 <% content_for(:page_description) { "View #{@product.name}"} %>
-<div class="main_content detail-product">           
+<div class="main_content detail-product" itemscope itemtype="http://schema.org/Product">           
   <h3 class="title"><%=(@product.category)%></h3>      
   <div class="row-fluid">
     <div class="span4">
@@ -9,9 +9,11 @@
       <%= link_to(image_tag(@product.aw_image_url, {
         :alt => (@product.name),
         :title => (@product.name),
+        :itemprop => "image",
       }), @product.merchant_image_url, {
         :class => "thumbnail", 
         :title => (@product.name),
+        :itemprop=>product_path(@product), 
         :"data-fancybox-group" => "group1"
       } )%>
       <% end %>
@@ -51,13 +53,13 @@
 =end %>
 
     <div class="span8">
-      <h5>
+      <h5 itemprop="name">
         <%
 =begin %> <span class="label label-important">10%</span> 
 <%
 =end %>  
   <%= (@product.name)%></h5>
-      <%= (@product.description)%>
+      <span itemprop="description"><%= (@product.description)%></span>
       <h4 class="clearfix"><strong>Price: 
           <span class="label label-important price"><%=@product.price%> <%=@product.currency%></span></strong></h4>                
       <div class="contact-information">
