--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Search#index</h1>
-<p>Find me in app/views/search/index.html.erb</p>
+<% content_for(:page_title) { "ShopWithMe - Seaching for #{params[:search]}" } %>
+<% content_for(:page_description) { "ShopWithMe - Seaching for #{params[:search]}" } %>
+
+<%=render 'products/search_form'%>
+
+<div class="main_content detail-product">
+  <h3 class="title">LISTINGS</h3>
+
+  <% if @results.size > 0 %>
+    
+    <% @results.each do |result| %>
+      <%= render result %>
+    <% end %>
+    <%#= render @products %>
+    <%= paginate @results, :window => 2 %>
+  <% else %>
+    <%= render 'no_items' %>
+  <% end %>
+
+</div>
