--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -27,8 +27,10 @@
   <% end %>
   <h3 class="title">LISTINGS in <%=@category%></h3>
 
+  <% path = ab_test('details_link_to_visit_in_listing', true, false)%>
+
   <% if @products.size > 0 %>
-    <%= render @products %>
+    <%= render @products, :path => path %>
     <%= paginate @products, :window => 2 %>
   <% else %>
     <%= render 'products/no_products' %>
