--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,3 +1,4 @@
+<% path = (path == true ? visit_product_path(product) : product_path(product) ) %>
 <div class="listing-item" itemscope itemtype="http://schema.org/Product">
   <div class="row-fluid">
     <div class="span7">
@@ -48,8 +49,7 @@
           <% end %>
           <strong>Merchant URL:</strong> 
           <a href="<%=product.advertiser.promote_url%>" rel="nofollow" target="_blank"><%=product.advertiser.single_url%></a></p>
-        
-          <%= link_to 'Details', product_path(product), {
+          <%= link_to 'Details', path, {
             :class => 'btn btn-small btn-primary ', 
             :title => (product.name)
           }  %>
