--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
   <div class="container-fluid" id="top-bar">
     <div class="row-fluid">
       <div class="span12">
-        <center style="color: #FFF;">The website is going through a rebranding process</center>
+        <!-- <center style="color: #FFF;">The website is going through a rebranding process</center> -->
 <%
 =begin %>
         <a class="brand pull-left" href="index.html"><img src="img/logo.png" alt="e-Classifieds" title="e-Classifieds"></a>
