--- a/app/views/advertisers/show.html.erb
+++ b/app/views/advertisers/show.html.erb
@@ -5,8 +5,8 @@
 <div class="main_content detail-product">
   <h3 class="title">LISTINGS by <%=@advertiser%></h3>
 
-  <% path = ab_test('details_link_to_visit_in_listing', true, false)%>
-
+  <% path = ab_test('details_link_to_visit_in_listing', 'yes', 'no')%>
+  
   <% if @products.size > 0 %>
     <%= render @products, :path => path  %>
     <%= paginate @products, :window => 2 %>
