--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,4 @@
-<% path = (path == true ? visit_product_path(product) : product_path(product) ) %>
+<% path = (path == 'yes' ? visit_product_path(product) : product_path(product) ) %>
 <div class="listing-item" itemscope itemtype="http://schema.org/Product">
   <div class="row-fluid">
     <div class="span7">
