--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -6,7 +6,7 @@
 <div class="main_content detail-product">
   <h3 class="title">LISTINGS by search <%=params[:search]%></h3>
 
-  <% path = ab_test('details_link_to_visit_in_listing', true, false)%>
+  <% path = ab_test('details_link_to_visit_in_listing', 'yes', 'no')%>
 
   <% if @products.results.size > 0 %>
     <%= render @products.results, :path => path  %>
