--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,15 @@
   <div class="container-fluid" id="top-bar">
     <div class="row-fluid">
       <div class="span12">
-        <!-- <center style="color: #FFF;">The website is going through a rebranding process</center> -->
-<%
-=begin %>
-        <a class="brand pull-left" href="index.html"><img src="img/logo.png" alt="e-Classifieds" title="e-Classifieds"></a>
+        <a class="brand pull-left" href="<%=root_url%>" title="ShopWithMe. Shop inteligent.">
+          <%= image_tag("logo.png", :alt => "ShopWithMe. Shop inteligent.", :title => "ShopWithMe. Shop inteligent.")%>
+        </a>
+        <!--
         <ul class="nav nav-pills pull-right">
-          <li class="phone"><img src="img/phone.png" alt="" /></li>
           <li><a href="#"><i class="icon-user icon-white"></i> Sign In</a></li>
           <li><a href="#"><i class="icon-edit icon-white"></i> Create your profile</a></li>
         </ul>
-<%
-=end %>
+      -->
       </div>
     </div>
   </div>
