--- a/app/views/brands/_brand.html.erb
+++ b/app/views/brands/_brand.html.erb
@@ -14,7 +14,7 @@
           <% if product.newer? %><span class="label label-success">new</span><br/><% end %>
           in <%= link_to_category(product.category,:short, {:class => "subinfo"}) %>
           at <%= link_to_advertiser(product.advertiser, :short, {:class => "subinfo"}) %>
-          <p><%=product.short_description%></p>
+          <p><%=raw(product.short_description)%></p>
         </div>
       </div>
 
