--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -380,3 +380,9 @@ ul.padded li a{
 }
 
 .uppercase { text-transform: uppercase; }
+
+body.deals.index {
+  
+  .block { margin-top: 10px}
+  .btn.deal { width: 176px; }
+}
