--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -37,7 +37,7 @@
     <div class="span8">
       <ul class="social pull-right">
         <li>                  
-          <div class="fb-like" send="false" layout="button_count" data-href="example.org"></div>
+          <div class="fb-like" send="false" layout="button_count" data-href="shop-with.me"></div>
           <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
         </li>
         <li>
@@ -46,9 +46,6 @@
         </li>
       </ul>
     </div> 
-
-    <%
-=end %>
 
     <div class="span8">
       <h5 itemprop="name">
