--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -36,13 +36,15 @@
 
     <div class="span8">
       <ul class="social pull-right">
-        <li>                  
-          <div class="fb-like" send="false" layout="button_count" data-href="shop-with.me"></div>
+        <li>
+          <div class="fb-like" data-send="true"  data-href="<%=product_url(@product)%>" data-layout="button_count" data-show-faces="false"></div>
           <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
         </li>
         <li>
-          <a href="https://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-url="http://a-smart.vn/products/itab-a989i3g-goi-dien.html" data-text="iTab A989i(3G)" data-via="a-smart.vn">Tweet</a>
-          <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="<%=product_url(@product)%>" 
+            data-text="<%=raw(@product)%>" data-count="none" data-hashtags="ShopWithMe" data-via="shop-with.me">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
         </li>
       </ul>
     </div> 
