--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -91,12 +91,22 @@
   <div class="row-fluid">
     <div class="span12">
       <ul class="nav nav-tabs" id="myTab">
-        <li class="active"><a href="#desc">DESCRIPTION</a></li>
+        <!-- <li class="active"><a href="#sim">SIMILAR PRODUCTS</a></li> -->
+        <li class='active'><a href="#desc">DESCRIPTION</a></li>
         <li><a href="#specs">SPECIFICATIONS</a></li>
         <li><a href="#profile">RECENT REVIEWS</a></li>
       </ul>              
       <div class="tab-content">
-        <div class="tab-pane active" id="desc">
+        <!--<div class="tab-pane active" id="sim">
+          <% if @products.size > 0 %>
+            <div class="row-fluid">
+              <%= render 'similar_products', :products => @products%>
+            </div>
+
+          <% else %>
+          <% end %>
+        </div>-->
+        <div class="tab-pane" id="desc">
           <%= @product.description.blank? ? "There is no description available" : raw(@product.description)%>
         </div>
         <div class="tab-pane" id="specs">
