--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body class="<%= params[:controller] + " " + params[:action] %>">
-<-- Digital window verification 001 -->
+<!-- Digital window verification 001 -->
 <%= render 'layouts/header' %>
   
 <div class="container-fluid">
