misc regarding the caching

--- a/app/views/advertisers/_index_sidebar.html.erb
+++ b/app/views/advertisers/_index_sidebar.html.erb
@@ -1,4 +1,4 @@
-<% cache('sidebar_categories', :expires => 24.hours) do %>
+<%# cache('sidebar_categories', :expires => 24.hours) do %>
   <%= render 'layouts/sidebar_categories' %>
-<% end %>
+<%# end %>
 
