--- a/app/views/brands/_index_sidebar.html.erb
+++ b/app/views/brands/_index_sidebar.html.erb
@@ -1,5 +1,5 @@
 
-<% cache('sidebar_categories', :expires => 24.hours) do %>
+<%# cache('sidebar_categories', :expires => 24.hours) do %>
   <%= render 'layouts/sidebar_categories' %>
-<% end %>
+<%# end %>
 
