--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:page_title) { @brand.name } %>
 <% content_for(:page_description) { "View products by #{@brand}"} %>
 
-<%=render 'products/search_form' %>
+<%#=render 'products/search_form' %>
 <div class="main_content detail-product">
   <h3 class="title">LISTINGS by <%=@brand%></h3>
 
