--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:page_title) { @category.name } %>
 <% content_for(:page_description) { "View products in #{@category.name}"} %>
 
-<%=render 'products/search_form' %>
+<%#=render 'products/search_form' %>
 <div class="main_content detail-product">
 
   <ul class="breadcrumb">
