--- a/app/views/advertisers/_show_sidebar.html.erb
+++ b/app/views/advertisers/_show_sidebar.html.erb
@@ -1,3 +1,3 @@
-<% cache('sidebar_categories', :expires => 24.hours) do %>
+<%# cache('sidebar_categories', :expires => 24.hours) do %>
   <%= render 'layouts/sidebar_categories' %>
-<% end %>
+<%# end %>
