--- a/app/views/advertisers/show.html.erb
+++ b/app/views/advertisers/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:page_title) { @advertiser.name } %>
 <% content_for(:page_description) { "View products by #{@advertiser.name} - #{@advertiser.strapline}"} %>
 
-<%=render 'products/search_form' %>
+<%#=render 'products/search_form' %>
 <div class="main_content detail-product">
   <h3 class="title">LISTINGS by <%=@advertiser%></h3>
 
