--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:page_title) { "ShopWithMe - Listing all the categories" } %>
 <% content_for(:page_description) { "ShopWithMe - Listing all the categories" } %>
 
-<%= render 'products/search_form' %>
+<%#= render 'products/search_form' %>
 
 <div class="main_content detail-product">
   <h3 class="title uppercase">Categories</h3>
