small cache fix

--- a/app/views/categories/_index_sidebar.html.erb
+++ b/app/views/categories/_index_sidebar.html.erb
@@ -3,16 +3,13 @@
 
 <div class="reviews-item">
   <ul class="inline padded">
-    <% categories = @categories.map(&:id) %>
-    <% cache("advertisers_for_#{categories.join("_")}_categories", :expires_in => 4.hours) do %>
-      <% Advertiser.fetch_by_categories_id(@categories.map(&:id)).random.limit(9).each do |advertiser| %>
-        <li><%=avatar_of_advertiser(advertiser)%></li>
-      <% end %>
+    <% Advertiser.fetch_by_categories_id(@categories.map(&:id)).random.limit(9).each do |advertiser| %>
+      <li><%=avatar_of_advertiser(advertiser)%></li>
     <% end %>
   </ul>
 </div>
 
-<% cache('sidebar_categories', :expires => 24.hours) do %>
+<%# cache('sidebar_categories', :expires => 24.hours) do %>
   <%= render 'layouts/sidebar_categories' %>
-<% end %>
+<%# end %>
 
