--- a/app/views/layouts/_sidebar_categories.html.erb
+++ b/app/views/layouts/_sidebar_categories.html.erb
@@ -16,7 +16,7 @@
               <li>&raquo; <%= link_to_category(cat)%><span>(<%=cat.products.size%>)</span></li>
               <% end %>
             <% else %>
-            <li>» <%= link_to_category(category)%><span>(<%=category.products.size%>)</span></li>
+            <li>&raquo; <%= link_to_category(category)%><span>(<%=category.products.size%>)</span></li>
             <% end %>
           </ul>
         </div>
