--- a/app/views/categories/_show_sidebar.html.erb
+++ b/app/views/categories/_show_sidebar.html.erb
@@ -1,15 +1,17 @@
 <h3 class="title nm">MERCHANTS IN THIS CATEGORY</h3>
-
+<%
+=begin %>
 <div class="reviews-item">
-  <ul class="inline padded">
-    <%# cache("advertisers_for_#{@category.id}_category", :expires_in => 3.hours) do %>
+  <ul class="inline padded"> 
+    <% cache("advertisers_for_#{@category.id}_category", :expires_in => 3.hours) do %>
       <% @category.fetch_advertisers.random.limit(9).each do |advertiser| %>
         <li><%=avatar_of_advertiser(advertiser)%></li>
       <% end %>
-    <%# end %>
+    <% end %>
   </ul>
 </div>
-
+<%
+=end %>
 
 <%# cache('sidebar_categories', :expires => 24.hours) do %>
   <%= render 'layouts/sidebar_categories' %>
