--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
     <% if Rails.env == 'production' %>
-      <title><%= ('ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : "" )) %></title>
+      <title><%= ('ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : "Shop inteligent!" )) %></title>
       <meta name="description" content="<%= ('ShopWithMe' + (content_for?(:page_description) ? ' - ' + yield(:page_description) : "") )%>"/>
       <script type="text/javascript">
 
