--- a/app/views/advertisers/show.html.erb
+++ b/app/views/advertisers/show.html.erb
@@ -1,5 +1,5 @@
-<% content_for(:page_title) { @advertiser.name } %>
-<% content_for(:page_description) { "View products by #{@advertiser.name} - #{@advertiser.strapline}"} %>
+<% content_for(:page_title) { "Display products by #{@category.name} merchant" } %>
+<% content_for(:page_description) { "View over {@products.total_count} products by #{@advertiser.name} merchant "} %>
 
 <%#=render 'products/search_form' %>
 <div class="main_content detail-product">
