--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-<% content_for(:page_title) { "ShopWithMe" } %>
-<% content_for(:page_description) { "ShopWithMe" } %>
+<% content_for(:page_title) { " Shop inteligent! We have over 6 million products you can choose from." } %>
+<% content_for(:page_description) { "Shop inteligent! We have over 6 million products you can choose from." } %>
 
 <%= render 'products/search_form' %>
 <div class="main_content">
