misc regarding the products page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -386,3 +386,15 @@ body.deals.index {
   .block { margin-top: 10px}
   .btn.deal { width: 176px; }
 }
+
+
+h1.smaller {
+  font-size: 20.5px;
+  line-height: 22px;
+  margin: 5px 0;
+}
+
+img.width127 {
+  max-width: 127px;
+  max-height: 127px;
+}
