--- a/app/views/advertisers/show.html.erb
+++ b/app/views/advertisers/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:page_title) { "Display products by #{@category.name} merchant" } %>
+<% content_for(:page_title) { "Display products by #{@advertiser.name} merchant" } %>
 <% content_for(:page_description) { "View over {@products.total_count} products by #{@advertiser.name} merchant "} %>
 
 <%#=render 'products/search_form' %>
