--- a/app/views/products/_similar_products.html.erb
+++ b/app/views/products/_similar_products.html.erb
@@ -1,31 +1,51 @@
-<%%>
+<% 
+  set1 = []
+  set2 = []
+  @products.each_with_index do |prod, index|
+    if index % 2 == 0
+      set1 << prod
+    else
+      set2 << prod
+    end
+  end
+%>
 
-<div class="span6">
-  <div class="featured-item">
-    <a href="detail.html"><img src="img/products/19_photo_2985.jpg" alt="Sell Harley-Davidson" title="Sell Harley-Davidson" class="img pull-left"></a>
-    <strong><a href="detail.html">Sell Harley-Davidson</a> <span class="label label-important">$312</span></strong>
-    <p>Published: 05/12/2010 by <a href="#" target="_blank"> Olivia Matthew</a> in <a href="#">Finance</a></p>
-    <p>This is example text for the overview section. This is my boss, Jonathan Hart, a self-made millionaire, he's quite a guy</p>
+<% if set1.size > 0 %>
+  <div class="span6">
+    <% set1.each do |product| %>
+      <div class="featured-item">
+        <%= avatar_of_product(product, {}, {
+          :class => 'img pull-left width127'
+        }) %>
+        <strong><%= link_to_product(product)%></strong>
+        <p>
+          by <%= link_to_advertiser(product.advertiser,:short) %> 
+          <% unless product.category.nil? %>
+            in <%= link_to_category(product.category,:short) %>
+          <% end %>
+        </p>
+        <p><%=raw(product.short_description(40))%></p>
+      </div>
+    <% end %>
   </div>
-  <div class="featured-item">
-    <a href="detail.html"><img src="img/products/1_photo_2941.jpg" alt="Setup your Table for Special Events" title="Setup your Table for Special Events" class="img pull-left"></a>
-    <strong><a href="detail.html">Setup your Table for Special Events</a></strong>
-    <p>Published: 01/24/2010 by <a href="#" target="_blank"> Anthony Mark</a> in <a href="#">Finance</a></p>
-    <p>This is example text for the overview section. One for all and all for one, Muskehounds are always ready.</p>
+<% end %>
+
+<% if set2.size > 0 %>
+  <div class="span6">
+    <% set2.each do |product| %>
+      <div class="featured-item">
+        <%= avatar_of_product(product, {}, {
+          :class => 'img pull-left width127'
+        }) %>
+        <strong><%= link_to_product(product)%></strong>
+        <p>
+          by <%= link_to_advertiser(product.advertiser,:short) %> 
+          <% unless product.category.nil? %>
+            in <%= link_to_category(product.category,:short) %>
+          <% end %>
+        </p>
+        <p><%=raw(product.short_description(40))%></p>
+      </div>
+    <% end %>
   </div>
-</div>
-<div class="span6">
-  <div class="featured-item">
-    <a href="detail.html"><img src="img/products/19_photo_2985.jpg" alt="Sell Harley-Davidson" title="Sell Harley-Davidson" class="img pull-left"></a>
-    <strong><a href="detail.html">Sell Harley-Davidson</a> <span class="label label-important">$312</span></strong>
-    <p>Published: 05/12/2010 by <a href="#" target="_blank"> Olivia Matthew</a> in <a href="#">Finance</a></p>
-    <p>This is example text for the overview section. This is my boss, Jonathan Hart, a self-made millionaire, he's quite a guy</p>
-  </div>
-  <div class="featured-item">
-    <a href="detail.html"><img src="img/products/1_photo_2941.jpg" alt="Setup your Table for Special Events" title="Setup your Table for Special Events" class="img pull-left"></a>
-    <strong><a href="detail.html">Setup your Table for Special Events</a></strong>
-    <p>Published: 01/24/2010 by <a href="#" target="_blank"> Anthony Mark</a> in <a href="#">Finance</a></p>
-    <p>This is example text for the overview section. One for all and all for one, Muskehounds are always ready.</p>
-  </div>
-</div>
-</div>
+<% end %>
