--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
-<% content_for(:page_title) { "Display products in #{@category.name} category" } %>
-<% content_for(:page_description) { "View over {@products.total_count} products in #{@category.name} category "} %>
+<% content_for(:page_title) { "Display products in #{raw(@category.name)} category" } %>
+<% content_for(:page_description) { "View over {@products.total_count} products in #{raw(@category.name)} category "} %>
 
 <%#=render 'products/search_form' %>
 <div class="main_content detail-product">
