--- a/app/views/error/404.html.erb
+++ b/app/views/error/404.html.erb
@@ -5,7 +5,7 @@
   <p><b>Or you could just press this neat little button:</b></p>
   <a href="<%=root_url%>" class="btn btn-large btn-info"><i class="icon-home icon-white"></i> Take Me Home</a>
   <% if current_admin and not current_admin.nil? %>
-  <a href="<%="https://www.google.com/webmasters/tools/removals-request?hl=en&siteUrl=http://www.shop-with.me/&urlt=#{request.protocol}#{request.host_with_port}#{request.fullpath}"%>" target="_blank" class="btn btn-large btn-danger"><i class="icon-remove icon-white"></i>Remove from google</a>
+  <a href="<%="https://www.google.com/webmasters/tools/removals-request?hl=en&siteUrl=http://www.shop-with.me/&urlt=#{request.env['HTTP_REFERER']}"%>" target="_blank" class="btn btn-large btn-danger"><i class="icon-remove icon-white"></i>Remove from google</a>
   <% end %>
   
 </div>
